data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_212.wast
;; 3. **Test 3**:     - Description: Use a combination of `br_if` branching instructions with `nop` scattered before a critical `unreachable` branch. Analyze if `nop` sequences misdirect flow to the `unreachable`.    - Constraint: Verifying that `nop` integrated with conditional branches does not lead to unintended `unreachable` execution.

(assert_invalid
  (module
    (func (block 
            (nop) 
            (br_if 0 (i32.const 1)) 
            (unreachable))) 
  )
  "unreachable executed incorrectly"
)